2005-07-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Use threads, speeding up ripping.

2005-07-14 Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-main.c:
	* src/sj-extracting.c:
	* src/sj-play.h:
	* src/sound-juicer.h:
	* data/sound-juicer.glade:
	Bring the progress bar to the main UI.

2005-07-13  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-main.c:
	Add a stock item for the Extract button, and re-name the state
	stock icons.

	* data/sound-juicer.glade:
	Use the extract stock item.

2005-07-13  Ross Burton  <ross@burtonini.com>

	* data/sj-play.png:
	* data/sj-record.png:
	* data/Makefile.am:
	New icons.  The play icon is taken from Totem, and the record icon
	is by Luca Cavalli (and should probably be replaced to match the
	play icon).

	* src/sj-main.c:
	Register and use Sound-Juicer specific stock items for the
	treeview.

	* src/sound-juicer.h:
	Name the stock items.

2005-07-13  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/sj-volume.[ch]:
	Add volume control widget (Ronald Bultje)

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Add volume widget to main window (Ronald)

	* src/sj-play.c:
	Respect the volume control (Ronald) and move some glade calls to
	static variables (me).

2005-07-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the explicit file system backend, it's not needed.

2005-07-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Disc instead of CD in the menu.

2005-07-04  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Put the icon in the Track column for now, and force the icon
	size (inspired by a patch from Luca Cavalli).

2005-07-03 Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-extracting.c: (cleanup), (on_extract_activate)
	Disable play button while extracting.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* autogen.sh:
	Use gnome-common (Ali Akcaagac).

2005-07-01    Madhan Raj M  <madhanrm@cvs.gnome.org>
