@@ -1,6 +1,12 @@
 2005-07-14  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
+	Thanks to Thomas Vander Stichele for telling me how to make the
+	buffers larger, and to check the link() call result.
+
+2005-07-14  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
 	Use threads, speeding up ripping.
 
 2005-07-14 Madhan Raj M  <madhanrm@cvs.gnome.org>
